// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a default modal 1`] = `
.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  -webkit-transform: translate3d(0px,0px,0px);
  -ms-transform: translate3d(0px,0px,0px);
  transform: translate3d(0px,0px,0px);
}

.c2[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c6 {
  -webkit-transform: translate3d(-50%,-50%,0px);
  -ms-transform: translate3d(-50%,-50%,0px);
  transform: translate3d(-50%,-50%,0px);
}

.c6[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c1 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 998;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  -moz-tap-highlight-color: rgba(0,0,0,0);
}

.c5 {
  position: fixed;
  z-index: 19900410;
  left: 50%;
  top: 50%;
}

.c0 {
  background-color: black;
  opacity: 0.6;
}

.c4 {
  padding: 0 1rem;
  max-width: 600px;
  width: 100%;
}

<div
  class=""
>
  <div>
    <button
      aria-hidden="false"
      class="c0 c1 c2 c3 "
      role="button"
      tabindex="-1"
    />
    <div
      aria-hidden="false"
      aria-modal="true"
      class="c4 c5 c6 c3"
      role="dialog"
    >
      <div
        class="c3"
      >
        This is the content
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly with a renderWrapper prop 1`] = `
.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  -webkit-transform: translate3d(0px,0px,0px);
  -ms-transform: translate3d(0px,0px,0px);
  transform: translate3d(0px,0px,0px);
}

.c2[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c6 {
  -webkit-transform: translate3d(-50%,-50%,0px);
  -ms-transform: translate3d(-50%,-50%,0px);
  transform: translate3d(-50%,-50%,0px);
}

.c6[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c1 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 998;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  -moz-tap-highlight-color: rgba(0,0,0,0);
}

.c5 {
  position: fixed;
  z-index: 19900410;
  left: 50%;
  top: 50%;
}

.c7 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

.c0 {
  background-color: black;
  opacity: 0.6;
}

.c4 {
  padding: 0 1rem;
  max-width: 600px;
  width: 100%;
}

@media (max-width:1568px) {
  .c7 {
    max-width: 1200px;
  }
}

@media (max-width:1328px) {
  .c7 {
    max-width: 1024px;
  }
}

@media (max-width:1152px) {
  .c7 {
    max-width: 768px;
  }
}

<div
  class=""
>
  <div>
    <button
      aria-hidden="false"
      class="c0 c1 c2 c3 "
      role="button"
      tabindex="-1"
    />
    <div
      aria-hidden="false"
      aria-modal="true"
      class="c4 c5 c6 c3"
      role="dialog"
    >
      <div
        class="c7 c3"
      >
        <div
          class="c3"
        >
          This is the content
        </div>
      </div>
    </div>
  </div>
</div>
`;
